1. account for horizontal scroll on board 2. fix chess notation disambiguation

--- a/client/src/components/Dashboard/style.scss
+++ b/client/src/components/Dashboard/style.scss
@@ -20,4 +20,13 @@
   height: 91vh;
   background-color: #262421;
   color: #fff;
+  display: flex;
+
+  .game-info {
+
+  }
+
+  .game-board {
+
+  }
 }
